FIX: Animaciones componentizadas, container de preguntas con collapse responsive

--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -20,6 +20,7 @@
   padding: 15px;
   box-shadow: 5px 5px rgba(0, 0, 0, 0.5);
   transition: all 300ms ease;
+  word-break: break-all;
 }
 
 .homeBtns:hover {
